# fine-tune-gptoss

./: .gitignore  README.md  pyproject.toml
reference/: gpt_oss_(120b)_a100_fine_tuning.py  gpt_oss_mxfp4_(20b)_inference.py
src/fine_tune_gptoss/: __init__.py  dataset_prep.py  gptoss_stream.py  paths.py  repo_dataset.py
src/fine_tune_gptoss/cli/: chat.py  prepare_dataset.py  train.py
