[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fine-tune-gptoss"
version = "0.1.0"
description = "TODO."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marko Rosenmüller" }]
keywords = []
dependencies = [
  "accelerate>=0.33",
  "bitsandbytes>=0.43",
  "datasets>=2.20",
  "huggingface-hub>=0.24",
  "numpy>=1.26",
  "peft>=0.12",
  "prompt_toolkit>=3.0",
  "safetensors>=0.4",
  "tokenizers>=0.19",
  "transformers==4.56.2",
  "trl==0.22.2",
  "unsloth",
  "unsloth_zoo",
]

[project.scripts]
prepare-dataset = "fine_tune_gptoss.cli.prepare_dataset:main"
train = "fine_tune_gptoss.cli.train:main"
chat = "fine_tune_gptoss.cli.chat:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fine_tune_gptoss*"]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.2",
]
